Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.1
-
None
-
74ed51600 (17.0)
Description
I was trying to get output for a configure failure and so I added --debug-find-pkg=Qt6Quick to "Additional CMake options", as shown in the attached screenshots. If I hit Re-configure with Initial Parameters (or Run CMake in the other tab), it worked as expected: I could see --debug-find-pkg=Qt6Quick in the debug output. If I right click on the project in the project tree and hit Run CMake from there, it doesn't.
Another thing is that I thought that the "Configure:" line at the top of that section would update to reflect the changes, but it didn't.
Product: Qt Creator 16.0.1 Based on: Qt 6.8.3 (Clang 15.0 (Apple), arm64) Built on: Apr 10 2025 07:30:38 From revision: f4dc189d9b