CMakePM: Always set additional cmake options for CMake run

If the user sets an additional cmake option, this option should be set
when "Run CMake" is called.

One such example would be "-Wno-dev" to supress the developer warnings.

Fixes: QTCREATORBUG-32992
Change-Id: I3e721245d5aaaa8a7bb20e87f6aecd84ed1989c2
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>